<resources>
    // App y activities
    <string name="app_name">Wine Smeller</string>
    <string name="activityTitle_auth">Autenticación</string>
    <string name="activityTitle_board">Cartel</string>
    <string name="activityTitle_addWine">Guardando en la bodega</string>
    <string name="activityTitle_myWinery">Mi Bodega</string>

    // Hints
    <string name="hintEditText_email">Email</string>
    <string name="hintEditText_password">Contraseña</string>
    <string name="hintEditText_searcher">Buscar..</string>

    // Text Buttons
    <string name="textButton_signUp">Registrar</string>
    <string name="textButton_login">Acceder</string>
    <string name="textButton_confirm">Confirmar</string>
    <string name="textButton_cancel">Cancelar</string>

    // Text Checkboxes
    <string name="textCheckBox_savingCredentials">Guardar sesión</string>

    // Titles
    <string name="title_ic_baseline_search">Buscar</string>
    <string name="title_optionMenu_settings">Ajustes</string>
    <string name="title_optionMenu_closeSession">Cerrar sesión</string>

    // Description of images/icons
    <string name="descImageView_icon">Icono Wine Smeller</string>
    <string name="descImageView_my_profile">Imagen de perfil</string>

    // Shared File
    <string name="prefs_file">com.projects.winesmiller_v10.PREFERENCE_FILE_KEY</string>

    // Textos de las opciones del menú navegator
    <string name="menu_home">Home</string>
    <string name="menu_board">Cartel</string>
    <string name="menu_yourWinery">Tu Bodega</string>
    <string name="menu_addWine">Uno Más</string>
    <string name="menu_search">Buscador</string>
    <string name="menu_foro">Foro</string>
    <string name="menu_scanner">Escáner</string>
    <string name="menu_cataNotes">Nota de catas</string>
    <string name="menu_slideshow">Slideshow</string>

    // Textos de activity Añadir Vino
    <string name="textView_addWine_name">Nombre</string>
    <string name="textView_addWine_alcohol">% vol.</string>
    <string name="textView_addWine_year">Año</string>
    <string name="textView_addWine_winery">Bodega</string>
    <string name="textView_addWine_barcode">Código de barras</string>
    <string name="textView_addWine_denominationOfOrigin">Denominación de origen</string>
    <string name="textView_addWine_denominationOfOrigin_aux">D. de origen</string>
    <string name="textView_addWine_ecologic">Ecológico</string>
    <string name="textView_addWine_aging">Envejecimiento</string>
    <string name="textView_addWine_country">País</string>
    <string name="textView_addWine_typeOfGrape">Tipo de uva</string>
    <string name="textView_addWine_typeOfWine">Tipo de vino</string>
    <string name="textView_addWine_rating">Puntuación</string>
    <string name="textView_addWine_notes">Notas</string>
    <string name="textView_addWine_button">Guardar</string>

    // Cámara
    <string name="text_no_permissions_camera">No puedes acceder a la cámara</string>
    <string name="text_new_image">Nueva captura</string>


    // Otros
    <string name="textView_cancel">Cancelado</string>


    // Textos a eliminar
    <string name="nombrePerfil">Pepa Martina</string>
    <string name="emailPerfil">PepaMartina@gmail.com</string>
    <string name="probando">PROBANDO</string>

</resources>